# t8-client

./: README.md  pyproject.toml
output/: spectrum_LP_Turbine_MAD31CY005_AM1_2019-04-10T14_49_24.csv  spectrum_LP_Turbine_MAD31CY005_AM1_2019-04-10T14_50_56.csv  wave_LP_Turbine_MAD31CY005_AM1_2019-04-10T14_49_24.csv  wave_LP_Turbine_MAD31CY005_AM1_2019-04-10T14_50_56.csv
output/spectrum/: spectrum_LP_Turbine_MAD31CY005_AM1_2019-04-11T14_40_30.csv  spectrum_LP_Turbine_MAD31CY005_AM3_2019-04-10T14_51_24.csv  spectrum_LP_Turbine_MAD31CY106_AM3_2019-04-12T18_27_44.csv  spectrum_LP_Turbine_MAD32CY010_AM1_2019-04-13T01_35_20.csv
output/wave/: wave_LP_Turbine_MAD31CY005_AM1_2019-04-11T14_40_30.csv  wave_LP_Turbine_MAD31CY005_AM3_2019-04-10T14_51_24.csv  wave_LP_Turbine_MAD31CY106_AM3_2019-04-12T18_27_44.csv  wave_LP_Turbine_MAD32CY010_AM1_2019-04-13T01_35_20.csv
src/t8-client/: flags.py
src/t8_client/: functions.py  main.py  module.py
tests/: test_convertion.py
