[project]
name = "t8-client"
version = "0.1.0"
description = "Aplicación para obtener información de la API del T8"
authors = [
    {name = "evacuervosolis",email = "evacuervosolis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "t8_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.26"
numpy = "^1.21"
matplotlib = "^3.4"
scipy = "^1.7"
python-dotenv = "^0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
